// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useItemIdentify returns identified items 1`] = `
[
  {
    "description": "DESCRIPTION",
    "id": 1,
    "itemId": 1,
    "name": "TEST ITEM #1",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 2,
    "itemId": 2,
    "name": "TEST ITEM #2",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 3,
    "itemId": 3,
    "name": "TEST ITEM #3",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 4,
    "itemId": 4,
    "name": "TEST ITEM #4",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 5,
    "itemId": 5,
    "name": "TEST ITEM #5",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 6,
    "itemId": 6,
    "name": "TEST ITEM #6",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 7,
    "itemId": 7,
    "name": "TEST ITEM #7",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 8,
    "itemId": 8,
    "name": "TEST ITEM #8",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 9,
    "itemId": 9,
    "name": "TEST ITEM #9",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 10,
    "itemId": 10,
    "name": "TEST ITEM #10",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 11,
    "itemId": 11,
    "name": "TEST ITEM #11",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 12,
    "itemId": 12,
    "name": "TEST ITEM #12",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 13,
    "itemId": 13,
    "name": "TEST ITEM #13",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 14,
    "itemId": 14,
    "name": "TEST ITEM #14",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 15,
    "itemId": 15,
    "name": "TEST ITEM #15",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 16,
    "itemId": 16,
    "name": "TEST ITEM #16",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 17,
    "itemId": 17,
    "name": "TEST ITEM #17",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 18,
    "itemId": 18,
    "name": "TEST ITEM #18",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 19,
    "itemId": 19,
    "name": "TEST ITEM #19",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 20,
    "itemId": 20,
    "name": "TEST ITEM #20",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 21,
    "itemId": 21,
    "name": "TEST ITEM #21",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 22,
    "itemId": 22,
    "name": "TEST ITEM #22",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 23,
    "itemId": 23,
    "name": "TEST ITEM #23",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 24,
    "itemId": 24,
    "name": "TEST ITEM #24",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 25,
    "itemId": 25,
    "name": "TEST ITEM #25",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 26,
    "itemId": 26,
    "name": "TEST ITEM #26",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 27,
    "itemId": 27,
    "name": "TEST ITEM #27",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 28,
    "itemId": 28,
    "name": "TEST ITEM #28",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 29,
    "itemId": 29,
    "name": "TEST ITEM #29",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 30,
    "itemId": 30,
    "name": "TEST ITEM #30",
    "severity": "low",
  },
]
`;

exports[`useItemIdentify returns identified items by name 1`] = `
[
  {
    "description": "DESCRIPTION",
    "id": 1,
    "itemId": "TEST ITEM #1",
    "name": "TEST ITEM #1",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 2,
    "itemId": "TEST ITEM #2",
    "name": "TEST ITEM #2",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 3,
    "itemId": "TEST ITEM #3",
    "name": "TEST ITEM #3",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 4,
    "itemId": "TEST ITEM #4",
    "name": "TEST ITEM #4",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 5,
    "itemId": "TEST ITEM #5",
    "name": "TEST ITEM #5",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 6,
    "itemId": "TEST ITEM #6",
    "name": "TEST ITEM #6",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 7,
    "itemId": "TEST ITEM #7",
    "name": "TEST ITEM #7",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 8,
    "itemId": "TEST ITEM #8",
    "name": "TEST ITEM #8",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 9,
    "itemId": "TEST ITEM #9",
    "name": "TEST ITEM #9",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 10,
    "itemId": "TEST ITEM #10",
    "name": "TEST ITEM #10",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 11,
    "itemId": "TEST ITEM #11",
    "name": "TEST ITEM #11",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 12,
    "itemId": "TEST ITEM #12",
    "name": "TEST ITEM #12",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 13,
    "itemId": "TEST ITEM #13",
    "name": "TEST ITEM #13",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 14,
    "itemId": "TEST ITEM #14",
    "name": "TEST ITEM #14",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 15,
    "itemId": "TEST ITEM #15",
    "name": "TEST ITEM #15",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 16,
    "itemId": "TEST ITEM #16",
    "name": "TEST ITEM #16",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 17,
    "itemId": "TEST ITEM #17",
    "name": "TEST ITEM #17",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 18,
    "itemId": "TEST ITEM #18",
    "name": "TEST ITEM #18",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 19,
    "itemId": "TEST ITEM #19",
    "name": "TEST ITEM #19",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 20,
    "itemId": "TEST ITEM #20",
    "name": "TEST ITEM #20",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 21,
    "itemId": "TEST ITEM #21",
    "name": "TEST ITEM #21",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 22,
    "itemId": "TEST ITEM #22",
    "name": "TEST ITEM #22",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 23,
    "itemId": "TEST ITEM #23",
    "name": "TEST ITEM #23",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 24,
    "itemId": "TEST ITEM #24",
    "name": "TEST ITEM #24",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 25,
    "itemId": "TEST ITEM #25",
    "name": "TEST ITEM #25",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 26,
    "itemId": "TEST ITEM #26",
    "name": "TEST ITEM #26",
    "severity": "low",
  },
  {
    "description": "DESCRIPTION",
    "id": 27,
    "itemId": "TEST ITEM #27",
    "name": "TEST ITEM #27",
    "severity": "unknown",
  },
  {
    "description": "DESCRIPTION",
    "id": 28,
    "itemId": "TEST ITEM #28",
    "name": "TEST ITEM #28",
    "severity": "high",
  },
  {
    "description": "DESCRIPTION",
    "id": 29,
    "itemId": "TEST ITEM #29",
    "name": "TEST ITEM #29",
    "severity": "medium",
  },
  {
    "description": "DESCRIPTION",
    "id": 30,
    "itemId": "TEST ITEM #30",
    "name": "TEST ITEM #30",
    "severity": "low",
  },
]
`;
